src/parser/mongo-aggregation-parser.ts

// Generated by peggy v. 3.0.2 (ts-pegjs plugin v. 3.1.0 )
//
// https://peggyjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";



import { createBasicAccumulator } from '@core/pipeline/accumulators/index';
import { Stage } from '@core/pipeline/stages';
import { ExpressionOperator } from '@core/pipeline/stages/expressions';



export interface FilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface FileRange {
  start: FilePosition;
  end: FilePosition;
  source: string;
}

export interface LiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface ClassParts extends Array<string | ClassParts> {}

export interface ClassExpectation {
  type: "class";
  parts: ClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface AnyExpectation {
  type: "any";
}

export interface EndExpectation {
  type: "end";
}

export interface OtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = LiteralExpectation | ClassExpectation | AnyExpectation | EndExpectation | OtherExpectation;

function peg$padEnd(str: string, targetLength: number, padString: string) {
  padString = padString || ' ';
  if (str.length > targetLength) {
    return str;
  }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

export class PeggySyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: FileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: FileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "PeggySyntaxError";

    if (typeof (Object as any).setPrototypeOf === "function") {
      (Object as any).setPrototypeOf(this, PeggySyntaxError.prototype);
    } else {
      (this as any).__proto__ = PeggySyntaxError.prototype;
    }
    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, PeggySyntaxError);
    }
  }

  format(sources: { grammarSource?: string; text: string }[]): string {
    let str = 'Error: ' + this.message;
    if (this.location) {
      let src: string[] | null = null;
      let k;
      for (k = 0; k < sources.length; k++) {
        if (sources[k].grammarSource === this.location.source) {
          src = sources[k].text.split(/\r\n|\n|\r/g);
          break;
        }
      }
      let s = this.location.start;
      let loc = this.location.source + ':' + s.line + ':' + s.column;
      if (src) {
        let e = this.location.end;
        let filler = peg$padEnd('', s.line.toString().length, ' ');
        let line = src[s.line - 1];
        let last = s.line === e.line ? e.column : line.length + 1;
        str += '\n --> ' + loc + '\n' + filler + ' |\n' + s.line + ' | ' + line + '\n' + filler + ' | ' +
          peg$padEnd('', s.column - 1, ' ') +
          peg$padEnd('', last - s.column, '^');
      } else {
        str += '\n at ' + loc;
      }
    }
    return str;
  }
}

function peg$parse(input: string, options?: ParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<any> = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions: {[id: string]: any} = { start: peg$parsestart };
  let peg$startRuleFunction: () => any = peg$parsestart;

  const peg$c0 = "[";
  const peg$c1 = peg$literalExpectation("[", false);
  const peg$c2 = ",";
  const peg$c3 = peg$literalExpectation(",", false);
  const peg$c4 = "]";
  const peg$c5 = peg$literalExpectation("]", false);
  const peg$c6 = function(stage: any): any { return [stage] as Stage[]; };
  const peg$c7 = "{";
  const peg$c8 = peg$literalExpectation("{", false);
  const peg$c9 = "$";
  const peg$c10 = peg$literalExpectation("$", false);
  const peg$c11 = "group";
  const peg$c12 = peg$literalExpectation("group", true);
  const peg$c13 = ":";
  const peg$c14 = peg$literalExpectation(":", false);
  const peg$c15 = "}";
  const peg$c16 = peg$literalExpectation("}", false);
  const peg$c17 = function(type: any, stage: any): any { return {type, ...stage}; };
  const peg$c18 = "match";
  const peg$c19 = peg$literalExpectation("match", true);
  const peg$c20 = "limit";
  const peg$c21 = peg$literalExpectation("limit", true);
  const peg$c22 = "_id";
  const peg$c23 = peg$literalExpectation("_id", false);
  const peg$c24 = function(groupExpr: any, accumulators: any): any { return {groupExpr, accumulators}; };
  const peg$c25 = function(outputFieldName: any, gr: any): any { return createBasicAccumulator({outputFieldName, operator: gr.operator, expression: gr.expression}) };
  const peg$c26 = function(operator: any, expression: any): any { return { operator, expression }; };
  const peg$c27 = function(value: any, values: any): any { return [value, ...values]; };
  const peg$c28 = function(value: any): any { return value; };
  const peg$c29 = "addtoset";
  const peg$c30 = peg$literalExpectation("addToSet", true);
  const peg$c31 = "avg";
  const peg$c32 = peg$literalExpectation("avg", true);
  const peg$c33 = "first";
  const peg$c34 = peg$literalExpectation("first", true);
  const peg$c35 = "last";
  const peg$c36 = peg$literalExpectation("last", true);
  const peg$c37 = "max";
  const peg$c38 = peg$literalExpectation("max", true);
  const peg$c39 = "min";
  const peg$c40 = peg$literalExpectation("min", true);
  const peg$c41 = "push";
  const peg$c42 = peg$literalExpectation("push", true);
  const peg$c43 = "sum";
  const peg$c44 = peg$literalExpectation("sum", true);
  const peg$c45 = function(conditionEnums: any): any { return { conditions: conditionEnums.flat() }; };
  const peg$c46 = "and";
  const peg$c47 = peg$literalExpectation("and", true);
  const peg$c48 = "or";
  const peg$c49 = peg$literalExpectation("or", true);
  const peg$c50 = "not";
  const peg$c51 = peg$literalExpectation("not", true);
  const peg$c52 = function(operator: any, conditions: any): any { return { operator, conditions }; };
  const peg$c53 = function(condition: any, conditions: any): any { return [condition, ...conditions]; };
  const peg$c54 = function(condition: any): any { return condition; };
  const peg$c55 = function(field: any, value: any): any { return { operator: 'eq', value: [{ field }, { value }]}; };
  const peg$c56 = function(limitValue: any): any { return { limit: limitValue }; };
  const peg$c57 = "eq";
  const peg$c58 = peg$literalExpectation("eq", true);
  const peg$c59 = "ne";
  const peg$c60 = peg$literalExpectation("ne", true);
  const peg$c61 = "gt";
  const peg$c62 = peg$literalExpectation("gt", true);
  const peg$c63 = "gte";
  const peg$c64 = peg$literalExpectation("gte", true);
  const peg$c65 = "lt";
  const peg$c66 = peg$literalExpectation("lt", true);
  const peg$c67 = "lte";
  const peg$c68 = peg$literalExpectation("lte", true);
  const peg$c69 = function(operator: any, value: any): any { return { operator, value }; };
  const peg$c70 = function(field: any, value: any): any { return { field, value }; };
  const peg$c71 = function(n: any): any { return { value: n } };
  const peg$c72 = "add";
  const peg$c73 = peg$literalExpectation("add", true);
  const peg$c74 = "subtract";
  const peg$c75 = peg$literalExpectation("subtract", true);
  const peg$c76 = "multiply";
  const peg$c77 = peg$literalExpectation("multiply", true);
  const peg$c78 = "divide";
  const peg$c79 = peg$literalExpectation("divide", true);
  const peg$c80 = "toupper";
  const peg$c81 = peg$literalExpectation("toUpper", true);
  const peg$c82 = "tolower";
  const peg$c83 = peg$literalExpectation("toLower", true);
  const peg$c84 = "cond";
  const peg$c85 = peg$literalExpectation("cond", true);
  const peg$c86 = "\"$";
  const peg$c87 = peg$literalExpectation("\"$", false);
  const peg$c88 = /^[^"]/;
  const peg$c89 = peg$classExpectation(["\""], true, false);
  const peg$c90 = "\"";
  const peg$c91 = peg$literalExpectation("\"", false);
  const peg$c92 = function(chars: any): any { return { field: chars.join('') } };
  const peg$c93 = /^[a-zA-Z_]/;
  const peg$c94 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  const peg$c95 = /^[a-zA-Z0-9_.]/;
  const peg$c96 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "."], false, false);
  const peg$c97 = function(firstLetter: any, restLetters: any): any { return firstLetter + restLetters.join(''); };
  const peg$c98 = /^[0-9]/;
  const peg$c99 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c100 = function(): any { return parseInt(text()); };
  const peg$c101 = "-";
  const peg$c102 = peg$literalExpectation("-", false);
  const peg$c103 = ".";
  const peg$c104 = peg$literalExpectation(".", false);
  const peg$c105 = "e";
  const peg$c106 = peg$literalExpectation("e", true);
  const peg$c107 = "E";
  const peg$c108 = peg$literalExpectation("E", false);
  const peg$c109 = "+";
  const peg$c110 = peg$literalExpectation("+", false);
  const peg$c111 = function(): any { return parseFloat(text()); };
  const peg$c112 = function(chars: any): any { return chars.join(''); };
  const peg$c113 = "'";
  const peg$c114 = peg$literalExpectation("'", false);
  const peg$c115 = /^[^']/;
  const peg$c116 = peg$classExpectation(["'"], true, false);
  const peg$c117 = "true";
  const peg$c118 = peg$literalExpectation("true", true);
  const peg$c119 = function(): any { return true; };
  const peg$c120 = "false";
  const peg$c121 = peg$literalExpectation("false", true);
  const peg$c122 = function(): any { return false; };
  const peg$c123 = "null";
  const peg$c124 = peg$literalExpectation("null", true);
  const peg$c125 = function(): any { return null; };
  const peg$c126 = peg$otherExpectation("whitespace");
  const peg$c127 = /^[ \t\n\r]/;
  const peg$c128 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): FileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: FileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: FileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): LiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: ClassParts, inverted: boolean, ignoreCase: boolean): ClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): AnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): EndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): OtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): FileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: FileRange) {
    return new PeggySyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: FileRange) {
    return new PeggySyntaxError(
      PeggySyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parsestart(): any {
    let s0;

    s0 = peg$parsepipeline();

    return s0;
  }

  function peg$parsepipeline(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parsews();
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parsestage();
        if (s3 as any !== peg$FAILED) {
          s4 = [];
          s5 = peg$currPos;
          s6 = peg$parsews();
          if (s6 as any !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 44) {
              s7 = peg$c2;
              peg$currPos++;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c3); }
            }
            if (s7 as any !== peg$FAILED) {
              s8 = peg$parsews();
              if (s8 as any !== peg$FAILED) {
                s9 = peg$parsestage();
                if (s9 as any !== peg$FAILED) {
                  s6 = [s6, s7, s8, s9];
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
          while (s5 as any !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$currPos;
            s6 = peg$parsews();
            if (s6 as any !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 44) {
                s7 = peg$c2;
                peg$currPos++;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c3); }
              }
              if (s7 as any !== peg$FAILED) {
                s8 = peg$parsews();
                if (s8 as any !== peg$FAILED) {
                  s9 = peg$parsestage();
                  if (s9 as any !== peg$FAILED) {
                    s6 = [s6, s7, s8, s9];
                    s5 = s6;
                  } else {
                    peg$currPos = s5;
                    s5 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          }
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parsews();
            if (s5 as any !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 93) {
                s6 = peg$c4;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c5); }
              }
              if (s6 as any !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c6(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestage(): Stage {
    let s0;

    s0 = peg$parsegroupStage();
    if (s0 as any === peg$FAILED) {
      s0 = peg$parsematchStage();
      if (s0 as any === peg$FAILED) {
        s0 = peg$parselimitStage();
      }
    }

    return s0;
  }

  function peg$parsegroupStage(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c7;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parsews();
      if (s2 as any !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 36) {
          s3 = peg$c9;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s3 as any !== peg$FAILED) {
          if (input.substr(peg$currPos, 5).toLowerCase() === peg$c11) {
            s4 = input.substr(peg$currPos, 5);
            peg$currPos += 5;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parsews();
            if (s5 as any !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 58) {
                s6 = peg$c13;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c14); }
              }
              if (s6 as any !== peg$FAILED) {
                s7 = peg$parsews();
                if (s7 as any !== peg$FAILED) {
                  s8 = peg$parsegroupStageContent();
                  if (s8 as any !== peg$FAILED) {
                    s9 = peg$parsews();
                    if (s9 as any !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 125) {
                        s10 = peg$c15;
                        peg$currPos++;
                      } else {
                        s10 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c16); }
                      }
                      if (s10 as any !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c17(s4, s8);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsematchStage(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c7;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parsews();
      if (s2 as any !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 36) {
          s3 = peg$c9;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s3 as any !== peg$FAILED) {
          if (input.substr(peg$currPos, 5).toLowerCase() === peg$c18) {
            s4 = input.substr(peg$currPos, 5);
            peg$currPos += 5;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c19); }
          }
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parsews();
            if (s5 as any !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 58) {
                s6 = peg$c13;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c14); }
              }
              if (s6 as any !== peg$FAILED) {
                s7 = peg$parsews();
                if (s7 as any !== peg$FAILED) {
                  s8 = peg$parsematchStageContent();
                  if (s8 as any !== peg$FAILED) {
                    s9 = peg$parsews();
                    if (s9 as any !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 125) {
                        s10 = peg$c15;
                        peg$currPos++;
                      } else {
                        s10 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c16); }
                      }
                      if (s10 as any !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c17(s4, s8);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parselimitStage(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 123) {
      s1 = peg$c7;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parsews();
      if (s2 as any !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 36) {
          s3 = peg$c9;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s3 as any !== peg$FAILED) {
          if (input.substr(peg$currPos, 5).toLowerCase() === peg$c20) {
            s4 = input.substr(peg$currPos, 5);
            peg$currPos += 5;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c21); }
          }
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parsews();
            if (s5 as any !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 58) {
                s6 = peg$c13;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c14); }
              }
              if (s6 as any !== peg$FAILED) {
                s7 = peg$parsews();
                if (s7 as any !== peg$FAILED) {
                  s8 = peg$parselimitStageContent();
                  if (s8 as any !== peg$FAILED) {
                    s9 = peg$parsews();
                    if (s9 as any !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 125) {
                        s10 = peg$c15;
                        peg$currPos++;
                      } else {
                        s10 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c16); }
                      }
                      if (s10 as any !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c17(s4, s8);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsegroupStageContent(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;
